--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
           </ul>
         </nav>
 
-        <ul class="contact list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="contact-link link-style"
+        <ul class="contact">
+          <li class="contact-list">
+            <a href="mailto:info@devstudio.com" class="list contact-link link-style"
               ><svg width="16" height="12" class="contact-icon">
                 <use href="./img/sprite2.svg#icon-envelopeg"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="contact-link link-style">
+          <li class="contact-list item">
+            <a href="tel:+380961111111" class="list contact-link link-style">
               <svg width="10" height="16" class="contact-icon">
                 <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
@@ -64,9 +64,7 @@
       <section class="hero overlay">
         <div class="contanier">
           <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-          <button data-modal-open type="button" class="hero-button">
-            Заказать услугу
-          </button>
+          <button data-modal-open type="button" class="hero-button">Заказать услугу</button>
         </div>
       </section>
 
@@ -82,8 +80,7 @@
               </div>
               <h2 class="features-title">Внимание к деталям</h2>
               <p class="features-text">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="item-list">
@@ -94,8 +91,7 @@
               </div>
               <h2 class="features-title">Пунктуальность</h2>
               <p class="features-text">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="item-list">
@@ -107,8 +103,7 @@
 
               <h2 class="features-title">Планирование</h2>
               <p class="features-text">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
+                Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="item-list">
@@ -119,8 +114,7 @@
               </div>
               <h2 class="features-title">Современные технологии</h2>
               <p class="features-text">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
           </ul>
@@ -133,12 +127,7 @@
           <ul class="work-list list">
             <li class="item">
               <div class="card-thumb">
-                <img
-                  src="./img/keyboard.jpg"
-                  alt="программист"
-                  width="370"
-                  height="294"
-                />
+                <img src="./img/keyboard.jpg" alt="программист" width="370" height="294" />
                 <div class="work-card">
                   <p class="work-card-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
                 </div>
@@ -147,12 +136,7 @@
 
             <li class="item">
               <div class="card-thumb">
-                <img
-                  src="./img/notebook.jpg"
-                  alt="женщина с телефоном"
-                  width="370"
-                  height="294"
-                />
+                <img src="./img/notebook.jpg" alt="женщина с телефоном" width="370" height="294" />
                 <div class="work-card list">
                   <p class="work-card-text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
                 </div>
@@ -161,12 +145,7 @@
 
             <li class="item">
               <div class="card-thumb">
-                <img
-                  src="./img/tablet.jpg"
-                  alt="планшет"
-                  width="370"
-                  height="294"
-                />
+                <img src="./img/tablet.jpg" alt="планшет" width="370" height="294" />
                 <div class="work-card list">
                   <p class="work-card-text">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
                 </div>
@@ -270,12 +249,7 @@
             </li>
             <li class="item card-box">
               <div class="card-thumb">
-                <img
-                  src="./img/marketing.jpg"
-                  alt="Николай Тарасов"
-                  width="270"
-                  height="260"
-                />
+                <img src="./img/marketing.jpg" alt="Николай Тарасов" width="270" height="260" />
               </div>
               <div class="team-card">
                 <h3 class="team-title">Николай Тарасов</h3>
@@ -314,12 +288,7 @@
             </li>
             <li class="item card-box">
               <div class="card-thumb">
-                <img
-                  src="./img/ul-designer.jpg"
-                  alt="Михаил Ермаков"
-                  width="270"
-                  height="260"
-                />
+                <img src="./img/ul-designer.jpg" alt="Михаил Ермаков" width="270" height="260" />
               </div>
               <div class="team-card">
                 <h3 class="team-title">Михаил Ермаков</h3>
@@ -417,8 +386,7 @@
         <div class="contanier footer-flex">
           <div class="footer-logo-address">
             <a href="./index.html" class="logo-footer link-style">
-              <span class="logo-color">Web</span
-              ><span class="logo-color-footer">Studio</span></a
+              <span class="logo-color">Web</span><span class="logo-color-footer">Studio</span></a
             >
             <address class="address-style">
               <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
@@ -431,9 +399,7 @@
                   >
                 </li>
                 <li class="item">
-                  <a
-                    href="tel:+380961111111"
-                    class="footer-address footer-time link link-style"
+                  <a href="tel:+380961111111" class="footer-address footer-time link link-style"
                     >+38 096 111 11 11</a
                   >
                 </li>
@@ -508,13 +474,7 @@
           <form class="form">
             <div class="form-group">
               <label for="name" class="form-label">Имя</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="form-input"
-                autofocus
-              />
+              <input type="text" name="name" id="name" class="form-input" autofocus />
               <svg width="18" height="18" class="icon-form">
                 <use href="./img/sprite5.svg#icon-person-black"></use>
               </svg>
@@ -544,16 +504,9 @@
             </div>
             <div class="form-group-checkbox">
               <label for="policy" class="form-label">
-                <input
-                  type="checkbox"
-                  name="policy"
-                  id="policy"
-                  class="checkbox"
-                />
+                <input type="checkbox" name="policy" id="policy" class="checkbox" />
                 <span class="check-icon"></span>
-                <span class="check-text"
-                  >Соглашаюсь с рассылкой и принимаю</span
-                >
+                <span class="check-text">Соглашаюсь с рассылкой и принимаю</span>
                 <a href="" class="policy-link link-style">Условия договора</a>
               </label>
             </div>
