--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           >
 
           <ul class="site-nav list">
-            <li class="item">
-              <a href="" class="link link-style current">Студия</a>
+            <li class="site-nav__item">
+              <a href="" class="site-nav__link current link-style">Студия</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="link link-style">Портфолио</a>
+            <li class="site-nav__item">
+              <a href="./portfolio.html" class="site-nav__link link-style">Портфолио</a>
             </li>
-            <li class="item">
-              <a href="" class="link link-style">Контакты</a>
+            <li class="site-nav__item">
+              <a href="" class="site-nav__link link-style">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -125,7 +125,7 @@
         <div class="contanier">
           <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
-            <li class="item">
+            <li class="work__item">
               <div class="card-thumb">
                 <img src="./img/keyboard.jpg" alt="программист" width="370" height="294" />
                 <div class="work-card">
@@ -134,7 +134,7 @@
               </div>
             </li>
 
-            <li class="item">
+            <li class="work__item">
               <div class="card-thumb">
                 <img src="./img/notebook.jpg" alt="женщина с телефоном" width="370" height="294" />
                 <div class="work-card list">
@@ -143,7 +143,7 @@
               </div>
             </li>
 
-            <li class="item">
+            <li class="work__item">
               <div class="card-thumb">
                 <img src="./img/tablet.jpg" alt="планшет" width="370" height="294" />
                 <div class="work-card list">
@@ -157,9 +157,9 @@
       <!-- Наша команда -->
       <section class="team">
         <div class="contanier">
-          <h2 class="title">Наша команда</h2>
+          <h2 class="team__title">Наша команда</h2>
           <ul class="team-flex list">
-            <li class="item card-box">
+            <li class="team__item card-box">
               <div class="card-thumb">
                 <img
                   src="./img/product-designer.jpg"
@@ -203,7 +203,7 @@
                 </ul>
               </div>
             </li>
-            <li class="item card-box">
+            <li class="team__item card-box">
               <div class="card-thumb">
                 <img
                   src="./img/frontend-developer.jpg"
@@ -247,7 +247,7 @@
                 </ul>
               </div>
             </li>
-            <li class="item card-box">
+            <li class="team__item card-box">
               <div class="card-thumb">
                 <img src="./img/marketing.jpg" alt="Николай Тарасов" width="270" height="260" />
               </div>
@@ -286,7 +286,7 @@
                 </ul>
               </div>
             </li>
-            <li class="item card-box">
+            <li class="team__item card-box">
               <div class="card-thumb">
                 <img src="./img/ul-designer.jpg" alt="Михаил Ермаков" width="270" height="260" />
               </div>
