--- a/portfolio.html
+++ b/portfolio.html
@@ -27,31 +27,29 @@
           >
 
           <ul class="site-nav list">
-            <li class="item">
-              <a href="./index.html" class="link link-style">Студия</a>
+            <li class="site-nav__item">
+              <a href="./index.html" class="site-nav__link link-style">Студия</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="link link-style current"
-                >Портфолио</a
-              >
+            <li class="site-nav__item">
+              <a href="" class="site-nav__link current link-style">Портфолио</a>
             </li>
-            <li class="item">
-              <a href="" class="link link-style">Контакты</a>
+            <li class="site-nav__item">
+              <a href="" class="site-nav__link link-style">Контакты</a>
             </li>
           </ul>
         </nav>
 
-        <ul class="contact list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="contact-link link-style"
+        <ul class="contact">
+          <li class="contact-list">
+            <a href="mailto:info@devstudio.com" class="list contact-link link-style"
               ><svg width="16" height="12" class="contact-icon">
                 <use href="./img/sprite2.svg#icon-envelopeg"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="contact-link link-style">
+          <li class="contact-list item">
+            <a href="tel:+380961111111" class="list contact-link link-style">
               <svg width="10" height="16" class="contact-icon">
                 <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
@@ -69,9 +67,7 @@
           <!--Фильтр кнопки -->
           <ul class="filtr list">
             <li class="first-child item">
-              <button type="button" class="filtr-button active-button">
-                Все
-              </button>
+              <button type="button" class="filtr-button active-button">Все</button>
             </li>
             <li class="first-child item">
               <button type="button" class="filtr-button">Веб-сайты</button>
@@ -97,9 +93,9 @@
                     height="294"
                   />
                   <p class="portfolio-animation-card">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
 
@@ -119,15 +115,13 @@
                     height="294"
                   />
                   <p class="portfolio-animation-card">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="portfolio-card">
-                  <h3 class="portfolio-title">
-                    Постер New Orlean vs Golden Star
-                  </h3>
+                  <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                   <p class="portfolio-text">Дизайн</p>
                 </div>
               </a>
@@ -142,9 +136,9 @@
                     height="294"
                   />
                   <p class="portfolio-animation-card">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="portfolio-card">
@@ -156,16 +150,11 @@
             <li class="item">
               <a href="" class="portfolio-link link-style">
                 <div class="portfolio-animation card-thumb">
-                  <img
-                    src="./img-hw-2/Наушники.jpg"
-                    alt="наушники"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./img-hw-2/Наушники.jpg" alt="наушники" width="370" height="294" />
                   <p class="portfolio-animation-card">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="portfolio-card">
@@ -177,16 +166,11 @@
             <li class="item">
               <a href="" class="portfolio-link link-style">
                 <div class="portfolio-animation card-thumb">
-                  <img
-                    src="./img-hw-2/Коробки.jpg"
-                    alt="две-коробки"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./img-hw-2/Коробки.jpg" alt="две-коробки" width="370" height="294" />
                   <p class="portfolio-animation-card">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="portfolio-card">
@@ -198,22 +182,15 @@
             <li class="item">
               <a href="" class="portfolio-link link-style">
                 <div class="portfolio-animation card-thumb">
-                  <img
-                    src="./img-hw-2/Ноут-черный.jpg"
-                    alt="монитор"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./img-hw-2/Ноут-черный.jpg" alt="монитор" width="370" height="294" />
                   <p class="portfolio-animation-card">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="portfolio-card">
-                  <h3 lang="en" class="portfolio-title">
-                    Inspiration has no Borders
-                  </h3>
+                  <h3 lang="en" class="portfolio-title">Inspiration has no Borders</h3>
                   <p class="portfolio-text">Веб-сайт</p>
                 </div>
               </a>
@@ -221,16 +198,11 @@
             <li class="item">
               <a href="" class="portfolio-link link-style">
                 <div class="portfolio-animation card-thumb">
-                  <img
-                    src="./img-hw-2/Журнал.jpg"
-                    alt="книга"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./img-hw-2/Журнал.jpg" alt="книга" width="370" height="294" />
                   <p class="portfolio-animation-card">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="portfolio-card">
@@ -242,16 +214,11 @@
             <li class="item">
               <a href="" class="portfolio-link link-style">
                 <div class="portfolio-animation card-thumb">
-                  <img
-                    src="./img-hw-2/Буквы.jpg"
-                    alt="белая бирка"
-                    width="370"
-                    height="294"
-                  />
+                  <img src="./img-hw-2/Буквы.jpg" alt="белая бирка" width="370" height="294" />
                   <p class="portfolio-animation-card">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="portfolio-card">
@@ -270,9 +237,9 @@
                     height="294"
                   />
                   <p class="portfolio-animation-card">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
                   </p>
                 </div>
                 <div class="portfolio-card">
@@ -292,8 +259,7 @@
         <div class="contanier footer-flex">
           <div class="footer-logo-address">
             <a href="./index.html" class="logo-footer link-style">
-              <span class="logo-color">Web</span
-              ><span class="logo-color-footer">Studio</span></a
+              <span class="logo-color">Web</span><span class="logo-color-footer">Studio</span></a
             >
             <address class="address-style">
               <p class="adress">г. Киев, пр-т Леси Украинки, 26</p>
@@ -306,9 +272,7 @@
                   >
                 </li>
                 <li class="item">
-                  <a
-                    href="tel:+380961111111"
-                    class="footer-address footer-time link link-style"
+                  <a href="tel:+380961111111" class="footer-address footer-time link link-style"
                     >+38 096 111 11 11</a
                   >
                 </li>
