--- a/portfolio.html
+++ b/portfolio.html
@@ -40,17 +40,17 @@
         </nav>
 
         <ul class="contact">
-          <li class="contact-list">
-            <a href="mailto:info@devstudio.com" class="list contact-link link-style"
-              ><svg width="16" height="12" class="contact-icon">
+          <li class="contact__list">
+            <a href="mailto:info@devstudio.com" class="list contact__link link-style"
+              ><svg width="16" height="12" class="contact__icon">
                 <use href="./img/sprite2.svg#icon-envelopeg"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="contact-list item">
-            <a href="tel:+380961111111" class="list contact-link link-style">
-              <svg width="10" height="16" class="contact-icon">
+          <li class="contact__list item">
+            <a href="tel:+380961111111" class="list contact__link link-style">
+              <svg width="10" height="16" class="contact__icon">
                 <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
